--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@ address {
 .header-container {
   display: flex;
   align-items: center;
+  width: 1600px;
 }
 
 /*---------- nav---------- */
@@ -117,10 +118,26 @@ address {
 .link:focus {
   color: var(--focus-color);
 }
-.site-nav-link{
+.site-nav-link {
   display: inline-block;
   padding: 8px 8px;
 }
+
+/* .mail .site-nav-link::before {
+  display: flex;
+  width: 16px;
+  height: 12px;
+  content: "";
+  background-image: url(../image/envelope.svg);
+  background-size: contain;
+  justify-content: ;
+}
+
+.envelope{
+  width: 16px;
+  height: 12px;
+  background-image: url(../image/envelope.svg);
+} */
 
 .site-contact {
   font-weight: 500;
@@ -141,17 +158,63 @@ address {
   margin-right: 50px;
 }
 
+.mail .site-nav-link {
+  display: block;
+}
+
+.site-nav-link:hover .mail-icon,
+.site-nav-link:focus .mail-icon {
+  fill: currentColor;
+}
+
+.phone .site-nav-link {
+  display: block;
+}
+
+.site-nav-link:hover .phone-icon,
+.site-nav-link:focus .phone-icon {
+  fill: currentColor;
+}
+
+/* .phone-icon:hover,
+.phone-icon:focus{
+  fill: red;
+} */
+
 /*--------------- main--------------- */
 
 /*--------------- Hero--------------- */
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  /* padding-top: 200px;
+  padding-bottom: 200px; */
   /* margin-bottom: 94px; */
   text-align: center;
-
-  background-color: var(--hero-bacground-color);
+  /* background-image: url(../image/hero-background.jpg); */
+  background-repeat: no-repeat;
+  /* background-color: var(--hero-bacground-color); */
+  /* max-width: 1600px;
+  margin: 0 auto;
+  background-size: cover; */
 }
+
+.bg {
+  max-width: 1600px;
+  height: 600px;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../image/hero-background.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  flex-grow: 1;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin: 0 auto;
+  background-size: cover;
+  /* background-origin: content-box; */
+}
+
 .hero-title {
   margin-bottom: 30px;
   font-weight: 900;
@@ -188,15 +251,27 @@ address {
 } */
 
 /*----------- Features----------- */
-.section {
-  /* margin-bottom: 94px; */
+/* .section {
+  margin-bottom: 94px;
   
-}
+} */
 /* .section:last-child {
   margin-bottom: 0;
 } */
 
-.features-section{
+.icon {
+  max-width: 270px;
+  max-height: 120px;
+  text-align: center;
+  margin-bottom: 30px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  border-radius: 4px;
+  background: #f5f4fa;
+  border-radius: 4px;
+}
+
+.features-section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -223,6 +298,12 @@ address {
   flex-basis: calc((100% - 90px) / 4);
 }
 
+.features-item::before {
+  content: "";
+  width: 240px;
+  height: 120px;
+}
+
 .Features-title {
   font-weight: 700;
   font-size: 14px;
@@ -242,7 +323,6 @@ address {
 .section-work {
   text-align: center;
   padding-bottom: 94px;
-  
 }
 
 .section-title {
@@ -268,7 +348,7 @@ address {
 .section-team {
   text-align: center;
   /* margin-bottom: 50px; */
-  
+
   padding-bottom: 94px;
   background-color: #f5f4fa;
 }
@@ -291,7 +371,7 @@ address {
   padding: 30px 0;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  border-bottom: 1px solid #000000;
+  /* border-bottom: 1px solid #000000; */
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -310,6 +390,87 @@ address {
   letter-spacing: 0.03em;
 }
 
+.team-social-list {
+  display: flex;
+  justify-content: center;
+  /* margin-top: 16px; */
+  gap: 10px;
+}
+
+.team-social-item {
+  width: 44px;
+  height: 44px;
+}
+
+.team-social-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--body-background-color);
+  align-items: center;
+  justify-content: center;
+}
+
+.team-social-icon {
+  fill: #afb1b8;
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+  background-color: var(--focus-color);
+}
+
+.team-social-link:hover .team-social-icon,
+.team-social-link:focus .team-social-icon {
+  fill: var(--body-background-color);
+}
+
+/*-------------- Clients-------------- */
+
+.section-clients {
+  text-align: center;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.clients {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+}
+
+.clients-item {
+  width: 170px;
+  height: 92px;
+  border: 1px solid rgba(175, 177, 184, 1);
+  border-radius: 4px;
+}
+
+.clients-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: var(--body-background-color);
+  align-items: center;
+  justify-content: center;
+}
+
+.clients-icon {
+  fill: rgba(175, 177, 184, 1);
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  background-color: var(--body-background-color);
+  border: 1px solid var(--focus-color);
+}
+
+.clients-link:hover .clients-icon,
+.clients-link:focus .clients-icon {
+  fill: var(--focus-color);
+}
+
 /*-------------- footer-------------- */
 .footer {
   background-color: var(--hero-bacground-color);
@@ -318,9 +479,15 @@ address {
 }
 
 /* .footer-container {
-  padding-top: 60px;
-  padding-bottom: 60px;
+ align-items: center;
 } */
+
+.footer-container-list {
+  display: flex;
+  gap: 70px;
+  align-items: baseline;
+}
+
 .footer-logo {
   color: var(--filter-battons-color);
   margin-right: 0;
@@ -346,11 +513,14 @@ row-gap: 90px;
   color: var(--hero-color);
   text-decoration: none;
 }
-.contacts .link {
+.contacts-item .link {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--footer-adress-color);
+}
+.contacts-item .adress-link {
+  color: var(--hero-color);
 }
 
 /* .contacts-item {
@@ -359,6 +529,49 @@ row-gap: 90px;
 
 .contacts:last-child {
   margin-bottom: 0;
+}
+
+.footer-title {
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--hero-color);
+  margin-bottom: 20px;
+}
+
+.footer-soc-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.footer-soc-item {
+  width: 44px;
+  height: 44px;
+}
+
+.footer-soc-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-soc-icon {
+  fill: #afb1b8;
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  background-color: var(--focus-color);
+}
+
+.footer-soc-link:hover .footer-soc-icon,
+.footer-soc-link:focus .footer-soc-icon {
+  fill: var(--body-background-color);
 }
 
 /*------------- portfolio------------- */
@@ -406,6 +619,8 @@ row-gap: 90px;
 .filter-btn:focus {
   background-color: var(--focus-color);
   color: var(--filter-battons-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .examples {
   display: flex;
@@ -437,6 +652,11 @@ row-gap: 90px;
   margin-bottom: 30px;
 }
 
+.examples-item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -446,6 +666,7 @@ img {
 .examples-link {
   font-family: Roboto, sans-serif;
   text-decoration: none;
+  box-shadow: none;
 }
 
 .examples-title {
