--- a/css/styles.css
+++ b/css/styles.css
@@ -501,7 +501,10 @@ address {
   /* display: flex; */
   /* gap: 70px; */
   /* align-items: baseline; */
+  margin-right: 70px;
 }
+
+.footer-container:last-child{margin-right: 0;}
 
 .footer-logo {
   color: var(--filter-battons-color);
